# My-University

./: .gitattributes  .gitignore  .gitignore.txt  README.md
.github/workflows/: codeql-analysis.yml
I курс/[PHP] Организация вычислительных систем/phppractice/: index.php  menu_bar.php
I курс/[python] Алгоритмы и структуры данных/binary_tree/: binary_tree.py
I курс/[python] Алгоритмы и структуры данных/checkers/: README.md  gameplay.py  log_log.py
I курс/[python] Алгоритмы и структуры данных/console_rating_log/: best_api.py  config.py  main.py  menu.py
II курс/[bash, python] Операционные системы симейства UNIX и сетевые технологии/: cron_checksum.sh
III Курс/: .gitattributes
III Курс/(html, css, js) Технологии разработки web приложений/: .gitignore
III Курс/(python) Технологии анализа данных и машинного обучения/: .gitignore
III Курс/(python) Технологии обработки больших данных/: .gitattributes  .gitignore
IV курс/: AndroidReactNative.lnk
IV курс/(C++, python) Технологии параллельного программирования/: .gitignore
IV курс/(python) Информационная безопасность/otp_hmac/: .gitignore  README.md  pyproject.toml
IV курс/(python) Информационная безопасность/otp_hmac/otp_hmac/: client.py  server.py
IV курс/(python) Технологии анализа данных и машинного обучения/: .gitignore
art/My_first_site/: donations.html  form.html  index.html  style.css
course II/BASH linux/: date.sh  menu.sh  ps_to_html.sh  useradd.sh
course II/JAVA programming/: .gitignore  .gitignore.txt
course II/PYTHON practice/: .gitignore
(+1290 files in other folders)
